--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "poc-version",
-  "version": "1.0.1",
+  "version": "1.0.2-rc.1",
   "description": "",
   "main": "index.js",
   "scripts": {
